--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - git -C build-harness checkout tf-lint
 
 script:
+  - make terraform:install
   - make terraform:get-plugins
   - make terraform:get-modules
   - make terraform:lint
