Fix image links and the badge `releases`

--- a/README.yaml
+++ b/README.yaml
@@ -23,7 +23,7 @@ badges:
     url: "https://travis-ci.org/cloudposse/terraform-null-label-cloudtrail"
   - name: "Latest Release"
     image: "https://img.shields.io/github/release/cloudposse/terraform-null-label.svg"
-    url: "https://travis-ci.org/cloudposse/terraform-null-label-cloudtrail/releases"
+    url: "https://github.com/cloudposse/terraform-null-label/releases/latest"
   - name: "Slack Community"
     image: "https://slack.cloudposse.com/badge.svg"
     url: "https://slack.cloudposse.com"
