--- a/README.yaml
+++ b/README.yaml
@@ -61,7 +61,11 @@ usage: |-
     name       = "bastion"
     attributes = ["public"]
     delimiter  = "-"
-    tags       = "${map("BusinessUnit", "XYZ", "Snapshot", "true")}"
+
+    tags = {
+      "BusinessUnit" = "XYZ",
+      "Snapshot"     = "true"
+    }
   }
   ```
 
@@ -106,7 +110,11 @@ usage: |-
     name       = "bastion"
     attributes = ["abc"]
     delimiter  = "-"
-    tags       = "${map("BusinessUnit", "ABC")}"
+
+    tags = {
+      "BusinessUnit" = "XYZ",
+      "Snapshot"     = "true"
+    }
   }
 
   resource "aws_security_group" "eg_prod_bastion_abc" {
@@ -133,7 +141,11 @@ usage: |-
     name       = "bastion"
     attributes = ["xyz"]
     delimiter  = "-"
-    tags       = "${map("BusinessUnit", "XYZ")}"
+
+    tags = {
+      "BusinessUnit" = "XYZ",
+      "Snapshot"     = "true"
+    }
   }
 
   resource "aws_security_group" "eg_prod_bastion_xyz" {
