--- a/README.yaml
+++ b/README.yaml
@@ -21,6 +21,9 @@ badges:
   - name: "Build Status"
     image: "https://travis-ci.org/cloudposse/terraform-null-label.svg?branch=master"
     url: "https://travis-ci.org/cloudposse/terraform-null-label-cloudtrail"
+  - name: "Codefresh Build Status"
+    image: "https://g.codefresh.io/api/badges/build?repoOwner=cloudposse&repoName=terraform-null-label&branch=master&pipelineName=terraform-null-label&accountName=cloudposse&type=cf-1"
+    url: "https://g.codefresh.io/pipelines/terraform-null-label/builds"
   - name: "Latest Release"
     image: "https://img.shields.io/github/release/cloudposse/terraform-null-label.svg"
     url: "https://github.com/cloudposse/terraform-null-label/releases/latest"
