--- a/codefresh.yml
+++ b/codefresh.yml
@@ -11,8 +11,7 @@ steps:
 
   terraform_lint_1:
     title: Test 1 - terraform lint
-    registry: cfcr
-    image: testing.cloudposse.co:tests
+    image: r.cfcr.io/cloudposse/testing.cloudposse.co:tests
     working_directory: examples/complete
     commands:
     - ls
