--- a/codefresh.yml
+++ b/codefresh.yml
@@ -11,7 +11,7 @@ steps:
 
   terraform_lint_1:
     title: Test 1 - terraform lint
-    image: r.cfcr.io/cloudposse/testing.cloudposse.co:tests
-    working_directory: examples/complete
+    image: r.cfcr.io/cloudposse/testing.cloudposse.co:${{TESTING_CLOUDPOSSE_CO_VERSION}}
+#    working_directory: examples/complete
     commands:
     - ls
