--- a/codefresh.yml
+++ b/codefresh.yml
@@ -12,8 +12,9 @@ steps:
     image: r.cfcr.io/cloudposse/testing.cloudposse.co:${{TESTING_CLOUDPOSSE_CO_VERSION}}
     working_directory: /
     commands:
-    - cp -r /conf/tests/terraform/ /codefresh/volume/terraform-null-label/examples/complete
-    - bats --tap /codefresh/volume/terraform-null-label/examples/complete/01.init.bats
-    - bats --tap /codefresh/volume/terraform-null-label/examples/complete/00.get-modules.bats
-    - bats --tap /codefresh/volume/terraform-null-label/examples/complete/00.get-plugins.bats
-    - bats --tap /codefresh/volume/terraform-null-label/examples/complete/00.lint.bats
+    - cp -r /conf/tests/terraform/ /codefresh/volume/terraform-null-label/examples/complete/
+    - cd /codefresh/volume/terraform-null-label/examples/complete
+    - bats --tap 01.init.bats
+    - bats --tap 00.get-modules.bats
+    - bats --tap 00.get-plugins.bats
+    - bats --tap 00.lint.bats
