--- a/codefresh.yml
+++ b/codefresh.yml
@@ -12,7 +12,7 @@ steps:
     image: r.cfcr.io/cloudposse/testing.cloudposse.co:${{TESTING_CLOUDPOSSE_CO_VERSION}}
     working_directory: /
     commands:
-    - cp -r /conf/tests/terraform/ /codefresh/volume/terraform-null-label/examples/complete/
+    - cp -a /conf/tests/terraform/. /codefresh/volume/terraform-null-label/examples/complete/
     - cd /codefresh/volume/terraform-null-label/examples/complete
     - ls
     - bats --tap 01.init.bats
