--- a/codefresh.yml
+++ b/codefresh.yml
@@ -7,15 +7,14 @@ steps:
     commands:
     - cf_export TESTING_CLOUDPOSSE_CO_VERSION=tests
 
-  terraform_lint_1:
-    title: Test 1 - terraform lint "examples/complete"
+  terraform_test_examples_complete:
+    title: Test "examples/complete"
     image: r.cfcr.io/cloudposse/testing.cloudposse.co:${{TESTING_CLOUDPOSSE_CO_VERSION}}
     working_directory: /
     commands:
-    - cp -a /conf/tests/terraform/. /codefresh/volume/terraform-null-label/examples/complete/
     - cd /codefresh/volume/terraform-null-label/examples/complete
-    - ls
-    - bats --tap 01.init.bats
-    - bats --tap 00.get-modules.bats
-    - bats --tap 00.get-plugins.bats
-    - bats --tap 00.lint.bats
+    - bats --tap /conf/tests/terraform/00.lint.bats
+    - bats --tap /conf/tests/terraform/01.validate.bats
+    - bats --tap /conf/tests/terraform/02.plan.bats
+    - bats --tap /conf/tests/terraform/03.apply.bats
+    # Add custom tests here, e.g. - bats --tap check_outputs.bats
