--- a/codefresh.yml
+++ b/codefresh.yml
@@ -5,7 +5,7 @@ steps:
     title: Init variables
     image: alpine
     commands:
-    - cf_export TESTING_CLOUDPOSSE_CO_VERSION=tests
+    - cf_export TESTING_CLOUDPOSSE_CO_VERSION=0.0.0-sha.f710308
 
   terraform_test_examples_complete:
     title: Test "examples/complete"
