--- a/codefresh.yml
+++ b/codefresh.yml
@@ -5,7 +5,7 @@ steps:
     title: Init variables
     image: alpine
     commands:
-    - cf_export TESTING_CLOUDPOSSE_CO_VERSION=0.0.0-sha.f710308
+    - cf_export TESTING_CLOUDPOSSE_CO_VERSION=tests
 
   terraform_test_examples_complete:
     title: Test "examples/complete"
@@ -16,5 +16,5 @@ steps:
     - bats --tap /conf/tests/terraform/00.lint.bats
     - bats --tap /conf/tests/terraform/01.validate.bats
     - bats --tap /conf/tests/terraform/02.plan.bats
-    - bats --tap /conf/tests/terraform/03.apply.bats
+    #- bats --tap /conf/tests/terraform/03.apply.bats
     # Add custom tests here, e.g. - bats --tap check_outputs.bats
