--- a/codefresh/tests.yml
+++ b/codefresh/tests.yml
@@ -1,5 +1,9 @@
 version: '1.0'
 
+stages:
+- Prepare
+- Test
+
 steps:
   main_clone:
     title: "Clone repository"
@@ -22,12 +26,14 @@ steps:
   ls:
     title: 'List directory'
     image: alpine:latest
+    stage: Test
     commands:
     - 'ls -al'
 
   test_examples_complete:
     title: Test "examples/complete"
     image: ${{TEST_IMAGE}}
+    stage: Test
     working_directory: /codefresh/volume/${{CF_REPO_NAME}}/examples/complete
     commands:
     - set -x
