--- a/codefresh/test.yml
+++ b/codefresh/test.yml
@@ -16,16 +16,17 @@ steps:
 
   test:
     type: "parallel"
-    test_module:
-      title: Test module
-      image: ${{TEST_IMAGE}}
-      stage: Test
-      commands:
-      - make -C test/ module
+    steps:
+      test_module:
+        title: Test module
+        image: ${{TEST_IMAGE}}
+        stage: Test
+        commands:
+        - make -C test/ module
 
-    test_examples_complete:
-      title: Test "examples/complete"
-      image: ${{TEST_IMAGE}}
-      stage: Test
-      commands:
-      - make -C test/ examples/complete
+      test_examples_complete:
+        title: Test "examples/complete"
+        image: ${{TEST_IMAGE}}
+        stage: Test
+        commands:
+        - make -C test/ examples/complete
