--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,5 @@
 TEST_HARNESS ?= https://github.com/cloudposse/test-harness.git
-TEST_HARNESS_BRANCH ?= tf-tests
+TEST_HARNESS_BRANCH ?= master
 TEST_HARNESS_PATH = $(realpath .test-harness)
 BATS_ARGS ?= --tap
 BATS_LOG ?= test.log
